2006.09.24: David Nichols
	* changed ncurses module initialization to only acquire the 
	  initialization lock after checking that it's not set outside the lock
	  (then it's checked again) - this is because the lock is only set once
	  (normally) so this should eliminate excessive mutexes (=performance
	  improvement)

2006.09.22: David Nichols
	* error-handling fix in ModuleManager.cc

2006.09.22: Pavel Vozenilek
	* committed initial tuxedo module support

2006.09.21: David Nichols
	* changes to make a win32 port possible
	* fixed type manager destruction when no program is executed
	* fixed a bug where auto-loaded modules were not registering their
	  provided features so module code could be loaded more than once if a
	  "%requires" directive for that module was parsed
	* fixed a parse-related static memory leak in lib/parser.yy

2006.09.16: David Nichols
	* doc updates
	* "tibrv" module: renamed namespace to "Tibrv"
	* "tibae" module: renamed namespace to "Tibae"

2006.09.12: David Nichols
	* implemented the "unreachable-code" warning
	* implemented the ability to return parse warnings if a parse mask is
	  passed to Program::parse(), ::parsePending(), or ::parseCommit() as 
	  the last argument to each respective method
	* changed parseDatasource() to correctly parse a datasource string
	  without a username or password
	* made QoreClass::name private
	* divided PO_NO_THREADS into PO_NO_THREAD_CONTROL (-R) and 
	  PO_NO_THREAD_CLASSES (-X) and respective command-line options
	* delayed QoreTypeManager initialization of default values until after
	  the default character set is set in order to ensure that NullString
	  is marked with a character set encoding
	* minor improvements to some test scripts

2006.09.10: David Nichols
	* "tibrv" module: fixed exception handling in QoreTibrvCmTransport
	* "tibae" module: updated to new internal API
	* fixed a memory leak when deleting qore classes that have pending 